fixed overflow body space

--- a/css/general.css
+++ b/css/general.css
@@ -22,9 +22,17 @@ html {
 }
 
 body {
+    width: 100%;
     margin: 2px;
     padding: 0;
     background-color: black;
+}
+
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    overflow-x: hidden; 
 }
 
 .walktall {
